Updating library for supporting Unicode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,8 @@ set(PROJECT_LIBS ${ICU_LIBS})
 
 add_library(${LIBRARY_NAME}
         ${SOURCE_DIR}/GS_CrossPlatformString.cpp
-        ${SOURCE_DIR}/GS_CrossPlatformIO.cpp)
+        ${SOURCE_DIR}/GS_CrossPlatformIO.cpp
+        ${SOURCE_DIR}/GS_CrossPlatformException.cpp)
 
 target_include_directories(${LIBRARY_NAME} PRIVATE ${PROJECT_INCLUDE_DIRS})
 
